fix gallery layout issue

--- a/scss/gallery/_gallery.scss
+++ b/scss/gallery/_gallery.scss
@@ -1,130 +1,3 @@
-.header {
-    position: relative;
-    z-index: 1;
-
-    nav {
-        position: relative;
-        padding-top: 1.875rem;
-        padding-bottom: 1.875rem;
-        max-width: 90rem;
-        margin: auto;
-        padding-left: 1.3rem;
-        padding-right: 1.3rem;
-
-
-        @include breakpoint-up(large) {
-
-            padding: 2.875rem 1rem;
-        }
-    }
-
-    // Hamburger open styles
-
-    &.open {
-
-
-        .header__toggle {
-            >span:first-child {
-                transform: rotate(45deg);
-                transform-origin: center left;
-            }
-
-            >span:nth-child(2) {
-                opacity: 0;
-            }
-
-            >span:last-child {
-                transform: rotate(-45deg);
-                transform-origin: 5px 3px;
-            }
-        }
-    }
-
-    &__logo {
-        color: #000;
-        font-family: "Montserrat", sans-serif;
-        font-size: 1.125rem;
-
-        @include breakpoint-up(medium) {
-            font-size: 2rem;
-        }
-    }
-
-    &__toggle {
-        span {
-            display: block;
-            width: 29px;
-            height: 3px;
-            background: $gray;
-            cursor: pointer;
-
-            transition: all 300ms ease-in-out;
-
-            &:not(:last-child) {
-                margin-bottom: 5px;
-            }
-        }
-    }
-
-    &__menu {
-        a {
-            color: #000;
-            font-size: 1.1rem;
-            letter-spacing: 0.15rem;
-            font-family: "Montserrat", sans-serif;
-
-
-        }
-
-        a:not(:last-child) {
-            margin-right: 2.6rem;
-        }
-
-
-
-        .active-nav {
-            background: $darkGreen;
-            color: $white;
-            padding: 0.45rem 1rem;
-            border-radius: 20px;
-        }
-    }
-
-    &__popup {
-        display: none;
-        position: absolute;
-        background: #fff;
-        padding: 1.625rem;
-        border-radius: 5px;
-        width: calc(100% - 3rem);
-        left: 50%;
-        margin-top: 1.5rem;
-        transform: translateX(-50%);
-        border: 1px solid $darkGreen;
-
-        a {
-            display: block;
-            color: #383838;
-            padding: 0.625rem;
-            text-align: center;
-
-        }
-
-        a:hover {
-            font-weight: 700;
-        }
-
-        .active-nav {
-            font-weight: bold;
-        }
-
-        &.active {
-            display: block;
-        }
-    }
-
-}
-
 .gallery__head {
     text-align: center;
     padding-top: 3.75rem;
@@ -145,8 +18,6 @@
 
 .gallery {
 
-
-
     &__content {
         padding-top: 2.5rem;
         padding-bottom: 4.75rem;
@@ -157,7 +28,6 @@
     &__photo {
         margin: 0.625rem;
         height: 25.125rem;
-        // background: $lightGray;
         border: 1px solid $lightGray;
         box-shadow: 5px 5px 13px #b3b3b3;
         width: 18.75rem;
