--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,9 +1,11 @@
 .about {
+    background: #f6fcff;
+
     &__content {
-        padding-top: 4.875rem;
-        padding-bottom: 4.875rem;
-        padding-left: 1rem;
-        padding-right: 1rem;
+        padding-top: 6.875rem;
+        padding-bottom: 6.875rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
 
         @include breakpoint-up(medium) {
             // padding-left: 1.875rem;
@@ -16,6 +18,11 @@
             margin-bottom: 3.625rem;
             text-align: center;
 
+            @include breakpoint-up(large) {
+                text-align: right;
+                margin-right: 0rem;
+            }
+
         }
 
         p {
@@ -23,6 +30,7 @@
 
             @include breakpoint-up(large) {
                 font-size: 16px;
+                margin: 0.6rem 0rem;
             }
 
             a {
